--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Homework 8</title>
+  <title>Homework 9</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
   <ul>
-    <li><a href="01-gallery.html">Image gallery</a></li>
-    <li><a href="02-form.html">Feedback form</a></li>
+    <li><a href="./01-gallery.html">Image gallery</a></li>
+    <li><a href="./02-form.html">Feedback form</a></li>
   </ul>
 </body>
 
