--- a/src/02-form.html
+++ b/src/02-form.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Feedback form</title>
-
-  <link rel="stylesheet" href="css/02-form.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -26,7 +25,6 @@
   </form>
 
   <script src="js/02-form.js" type="module"></script>
-
 </body>
 
 </html>
