--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Image gallery</title>
 
-  <link rel="stylesheet" href="css/01-gallery.css" />
+  <link rel="stylesheet" href="./css/01-gallery.css" />
 
 </head>
 
@@ -16,7 +16,7 @@
   <p><a href="index.html">Go back</a></p>
   <ul class="gallery"></ul>
 
-  <script src="js/01-gallery.js" type="module"></script>
+  <script src="./js/01-gallery.js" type="module"></script>
 
 </body>
 
