--- a/src/02-form.html
+++ b/src/02-form.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Feedback form</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/02-form.css" />
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <button type="submit">Submit</button>
   </form>
 
-  <script src="js/02-form.js" type="module"></script>
+  <script src="./js/02-form.js" type="module"></script>
 </body>
 
 </html>
