--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Image gallery</title>
-
+<!-- CSS -->
   <link rel="stylesheet" href="./css/01-gallery.css" />
 
 </head>
@@ -16,6 +16,7 @@
   <p><a href="index.html">Go back</a></p>
   <ul class="gallery"></ul>
 
+  <!-- JS -->
   <script src="./js/01-gallery.js" type="module"></script>
 
 </body>
