--- a/src/02-form.html
+++ b/src/02-form.html
@@ -6,12 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Feedback form</title>
+  <!-- CSS -->
   <link rel="stylesheet" href="./css/02-form.css" />
 </head>
 
 <body>
   <p><a href="index.html">Go back</a></p>
 
+<!-- FORM -->
   <form class="feedback-form" autocomplete="off">
     <label>
       Email
@@ -24,6 +26,7 @@
     <button type="submit">Submit</button>
   </form>
 
+<!-- JS -->
   <script src="./js/02-form.js" type="module"></script>
 </body>
 
